# ocs2_tracer_jaka

./: README.md
src/jaka_hardware_interface/: CMakeLists.txt
src/jaka_hardware_interface/test/: test_jaka_hardware_interface.cpp
src/jaka_ros2/src/dh_ag_ros2/src/dh_ag95_ros2/dh_ag_95/: setup.py
src/jaka_ros2/src/jaka_driver/config/: jaka_servo_params.yaml
src/jaka_ros2/src/jaka_driver/launch/: moveit_real.launch.py  servo.launch.py
src/jaka_ros2/src/jaka_driver/src/: jaka_joy_to_servo.cpp  jaka_login.cpp
src/jaka_tracer_ocs2/: CMakeLists.txt  package.xml
src/jaka_tracer_ocs2/config/: bridge_params.yaml  gazebo_ros2_controllers.yaml
src/jaka_tracer_ocs2/config/tracer_jaka/: task.info
src/jaka_tracer_ocs2/include/jaka_tracer_ocs2/: jaka_tracer_bridge.hpp
src/jaka_tracer_ocs2/launch/: real_robot.launch.py  tracer_jaka.launch.py  tracer_jaka_gazebo_ocs2.launch.py
src/jaka_tracer_ocs2/resource/tracer_jaka/urdf/: tracer_jaka_zu5.urdf  tracer_jaka_zu5_demo.urdf
src/jaka_tracer_ocs2/src/: jaka_tracer_bridge.cpp
src/tracer_jaka_gazebo/: CMakeLists.txt  README.md  package.xml
src/tracer_jaka_gazebo/config/: gz_bridge.yaml  tracer_jaka_controllers.yaml
src/tracer_jaka_gazebo/launch/: display.launch.py  gazebo.launch.py
src/tracer_jaka_gazebo/rviz/: mobile_manipulator.rviz  tracer_jaka.rviz
src/tracer_jaka_gazebo/urdf/: tracer_jaka.gazebo.xacro  tracer_jaka.ros2_control.xacro  tracer_jaka.urdf.xacro
src/tracer_jaka_gazebo/worlds/: empty.world
src/tracer_jaka_moveit_config/: .setup_assistant  package.xml
src/tracer_jaka_moveit_config/config/: moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  tracer_jaka_zu5.ros2_control.xacro  tracer_jaka_zu5.srdf  tracer_jaka_zu5.urdf.xacro
src/tracer_jaka_ocs2/: CMakeLists.txt  package.xml
src/tracer_jaka_ocs2/config/: task.info
src/tracer_jaka_ocs2/launch/: ocs2_only.launch.py  ocs2_sim.launch.py
src/tracer_jaka_ocs2/rviz/: tracer_jaka_ocs2.rviz
src/tracer_jaka_ocs2/src/: TracerJakaMpcNode.cpp  TracerJakaMrtNode.cpp  TracerJakaTargetNode.cpp
