<?xml version="1.0"?>
<package format="3">
  <name>jaka_tracer_ocs2</name>
  <version>0.1.0</version>
  <description>
    Bridge between OCS2 mobile_manipulator MPC and the real Jaka ZU5 +
    Tracer differential-drive base.  Subscribes /joint_states + /odom,
    publishes SystemObservation, and converts MPC policy into /cmd_vel +
    JointTrajectory commands.
  </description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_self_collision</depend>
  <depend>ocs2_mobile_manipulator</depend>
  <depend>ocs2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
